# Own-AI

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  colab_train_7b.ipynb  collect_cyber_data.py  deploy_runpod.sh  docker-compose.yml  kaggle_train_7b.ipynb  requirements.txt  zero_gpu_setup.md
.githooks/: pre-commit
agent/: orchestrator.py
agent/cpp/: CMakeLists.txt
agent/cpp/include/: cyber_orchestrator.hpp
agent/cpp/src/: llama_client.cpp  main.cpp  orchestrator.cpp  scope_guardrail.cpp  tool_executor.cpp
backend/: Dockerfile  requirements.txt
configs/: deepseek-coder-6.7b.yaml  llama31-8b.yaml  qwen25-coder-7b-cyber.yaml  qwen25-coder-7b.yaml
data/: cve_samples.jsonl  cyber_train_merged.jsonl  tool_samples.jsonl
data_collection/: enhanced_collector.py  fetch_awesome_ml_datasets.py
dataset/: Dockerfile  build_dataset.py  fetch_cve.py  merge_enhanced.py  requirements.txt
docker/: Dockerfile.sandbox  Dockerfile.train  Dockerfile.ui  Modelfile  docker-compose.full.yml  docker-compose.train.yml  prometheus.yml
docs/: README.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
inference/: Dockerfile
sandbox/: run.py
scripts/: attack_map.py  benchmark.py  build_corpus.sh  build_corpus_local.py  chat_streamlit.py  chat_ui.py  convert_gguf.py  dataset_manager.py  deploy_cloud.sh  eval.py  finetune_peft.py  generate_tool_samples.py  kali_tools.py  pipeline.py  prep_dataset.py  rag_llama_index.py  rag_query.py  sandbox_run.sh  scrape_dataset.py  serve_ollama.sh  serve_vllm.sh  train.sh  (+1 more)
(+57 files in other folders)
